src/test/resources/tests/typeError/conditionalonList.qg

init {
    linkedList(:number) ? true : false
}

run true

input(a,b) true